docs/v1/trans.md
::: danger 本页面已归档！
本页面为 v1 版本的旧文档，已经过时并停止更新。你可以前往[暮雪酱 v3 文档](../v3/)查看当前最新版本。
:::

# BaiduTranslate - 百度翻译

## 指令帮助

### #trans - 执行百度翻译

**指令格式**

```
#trans [源语言:目标语言] <文本>
```

**简写形式**

`翻译`

**使用示例**

```
- 将 pure 翻译成中文（源语言将自动检测）
#trans pure
- 等同于
#trans auto:zh pure

- 将 rabbit 由英文翻译成日文
#trans en:jp rabbit
- 等同于
#trans 英语:日语 rabbit

- 使用简写形式
翻译 world ender
```

**语言列表**

代码和中文名都可以使用

| 语言代码 | 语言中文名 |
|------|--------------|
| auto | 自动, 自动检测  |
| zh   | 中文, 简中  |
| en   | 英语, 英文  |
| yue  | 粤语  |
| wyw  | 文言文  |
| jp   | 日语, 日文  |
| kor  | 韩语, 韩文  |
| fra  | 法语, 法文  |
| spa  | 西班牙语  |
| th   | 泰语  |
| ara  | 阿拉伯语  |
| ru   | 俄语, 俄文  |
| pt   | 葡萄牙语  |
| de   | 德语, 德文  |
| it   | 意大利语  |
| el   | 希腊语  |
| nl   | 荷兰语  |
| pl   | 波兰语  |
| bul  | 保加利亚语  |
| est  | 爱沙尼亚语  |
| dan  | 丹麦语  |
| fin  | 芬兰语  |
| cs   | 捷克语  |
| rom  | 罗马尼亚语  |
| slo  | 斯洛文尼亚语  |
| swe  | 瑞典语  |
| hu   | 匈牙利语  |
| cht  | 繁体中文, 繁中  |
| vie  | 越南语 |